Appwrap issues

--- a/src/container/Skills/skills.scss
+++ b/src/container/Skills/skills.scss
@@ -1,4 +1,4 @@
-#skills{
+#skills {
   .copyright {
     display: none;
   }
@@ -7,6 +7,7 @@
 .app__skills {
   flex: 1;
   width: 100%;
+  margin: auto;
   flex-direction: column;
 }
 
