--- a/src/container/Testimonial/testimonial.scss
+++ b/src/container/Testimonial/testimonial.scss
@@ -7,6 +7,7 @@
 .app__testimonial {
   flex: 1;
   width: 100%;
+  margin: auto;
   flex-direction: column;
 }
 
